<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Log_Bg"
    tools:context=".OtpActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="414dp"
        android:layout_height="67dp"
        android:layout_marginBottom="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/basebox" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OFFICE OF STUDENTS WELFARE"
        android:textColor="#FFF6F6"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.422" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="412dp"
        android:layout_height="312dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.882"
        app:srcCompat="@drawable/ellip1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="82.5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/asklogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="341dp"
        android:layout_height="94dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/edit4"
            style="@style/CustomTF"
            android:layout_width="54dp"
            android:layout_height="61dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textColorHint="#393939"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.678" />

        <EditText
            android:id="@+id/edit1"
            style="@style/CustomTF"
            android:layout_width="54dp"
            android:layout_height="61dp"
            android:layout_marginStart="4dp"
            android:ems="10"
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textColorHint="#393939"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.678" />

        <EditText
            android:id="@+id/edit2"
            style="@style/CustomTF"
            android:layout_width="54dp"
            android:layout_height="61dp"
            android:layout_marginStart="41dp"
            android:ems="10"
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textColorHint="#393939"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696" />

        <EditText
            android:id="@+id/edit3"
            style="@style/CustomTF"
            android:layout_width="54dp"
            android:layout_height="61dp"
            android:layout_marginStart="41dp"
            android:ems="10"
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textColorHint="#393939"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP"
        android:textColor="#2E0024"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background_landing"
        android:backgroundTint="@color/Base_Primary"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="17dp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/Message_otp"
        android:textAlignment="center"
        android:textColor="#615454"
        android:textSize="16dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>