...
            android:layout_width="108dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/leftarrow" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Reminder"
            android:textColor="#2E0024"
            android:textSize="32dp"
...
